test/e2e/cluster-internal/access-manual-listener.yaml
---
apiVersion: listeners.kubedoop.dev/v1alpha1
kind: Listener
metadata:
  creationTimestamp: "2024-12-25T06:19:48Z"
  generation: 1
  name: manual-listener
spec:
  className: cluster-internal
  ports:
  - name: http
    port: 8080
    protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: access-manual-listener
spec:
  selector:
    matchLabels:
      app: access-manual-listener
  serviceName: default
  replicas: 3
  template:
    metadata:
      labels:
        app: access-manual-listener
    spec:
      containers:
      - name: caddy
        image: caddy:2
        command:
        - sh
        - -c
        - |
          echo "start caddy"
          caddy file-server --access-log --root /usr/share/caddy --listen :8080
        resources:
          limits:
            memory: "50Mi"
            cpu: "50m"
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          httpGet:
            port: http
          initialDelaySeconds: 2
          periodSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
      - name: access-manual-listener
        image: registry.access.redhat.com/ubi9-minimal:latest
        command:
        - sh
        - -c
        - |
          while true; do
            if [ -d "/opt/listener/default-address" ]; then
              break
            fi
            echo "waiting for listener address to be created"
            sleep 2
          done
          ADDRESS=$(cat /opt/listener/default-address/address)
          PORT=$(cat /opt/listener/default-address/ports/http)
          echo "default listener address: $ADDRESS:$PORT"

          # use curl to access the listener with 5 times retry and 2 seconds interval
          for i in {1..5}; do
            if curl -s $ADDRESS:$PORT > /dev/null; then
              sleep infinity
            fi
            echo "failed to access the listener, retrying in 2 seconds..."
            sleep 2
          done
          echo "failed to access the listener 5 times, exiting..."
          exit 1
        resources:
            limits:
              memory: "10Mi"
              cpu: "10m"
        volumeMounts:
          - name: manual-listener
            mountPath: /opt/listener
  volumeClaimTemplates:
    - metadata:
        annotations:
          listeners.kubedoop.dev/listenerName: manual-listener
        name: manual-listener
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: listeners.kubedoop.dev
        resources:
          requests:
            storage: 1Mi
