test/e2e/cluster-internal/listenerclass.yaml
apiVersion: listeners.kubedoop.dev/v1alpha1
kind: ListenerClass
metadata:
  name: cluster-internal
spec:
  serviceType: ClusterIP
