test/e2e/cluster-internal/listeneringress.yaml
# Description: This test checks if the listener ingress is working as expected.
# The listener ingress is a service that is exposed to the cluster internal network.
---
apiVersion: v1
kind: Pod
metadata:
  name: access-listeneringress
  labels:
    name: access-listeneringress
spec:
  restartPolicy: Never
  serviceAccountName: test
  containers:
  - name: kubectl
    image: bitnami/kubectl:1.22.2
    command:
    - sh
    - -c
    - |
      echo "accessing with listener ingress"

      # get the listener
      address=$(kubectl get listener caddy-caddy-listener -o jsonpath='{.status.ingressAddresses[0].address}')
      if [ -z "$address" ]; then
        echo "listener address not found"
        exit 1
      fi

      # get the port
      port=$(kubectl get listener caddy-caddy-listener -o jsonpath='{.status.ingressAddresses[0].ports.http}')
      if [ -z "$port" ]; then
        echo "listener port not found"
        exit 1
      fi

      echo "getting listener address: $address, port: $port"

      # access the listener
      if wget -qO - http://$address:$port | grep -q "Caddy works"; then
        echo "accessed listener ingress successfully"
        exit 0
      else
        echo "failed to access listener ingress"
        exit 1
      fi
    resources:
      limits:
        cpu: 50m
        memory: 50Mi
