test/e2e/cluster-internal/pod.yaml
# Description: Example Test listeners of the cluster-internal type.
# The pod specifies the use of a cluster-internal type listener through a temporary volume.
# The listener-operator will create a service resource object of type clusterIP for this pod and bind it to the pod.
# When providing services externally, you only need to access the service using its address and port.
# You don't need to worry about the pod's address and port.
#
# In this test, to facilitate other services accessing the access information provided by the listener,
# we write the allocated address and port information into a ConfigMap object using an init container.
# Other services can retrieve the access information from the ConfigMap object.
# Note: This is just a test case. In a real application, you should use Listener.Status.IngressAddresses
# in the operator logic to create ConfigMap objects for other services.

---
apiVersion: v1
kind: Pod
metadata:
  name: caddy
  labels:
    name: caddy
spec:
  serviceAccountName: test
  initContainers:
  - name: init
    image: bitnami/kubectl:1.29
    env:
    - name: POD_NAME
      valueFrom:
        fieldRef:
          fieldPath: metadata.name
    - name: UID
      valueFrom:
        fieldRef:
          fieldPath: metadata.uid
    command:
    - sh
    - -c
    - |
      while true; do
        if [ -d "/opt/listener/default-address" ]; then
          break
        fi
        echo "waiting for listener address to be created"
        sleep 2
      done
      ADDRESS=$(cat /opt/listener/default-address/address)
      PORT=$(cat /opt/listener/default-address/ports/http)
      echo "default listener address: $ADDRESS:$PORT"

      kubectl apply -f - <<EOF
      apiVersion: v1
      kind: ConfigMap
      metadata:
        name: caddy-service-discovery
        ownerReferences:
        - apiVersion: v1
          blockOwnerDeletion: true
          controller: true
          kind: Pod
          name: $POD_NAME
          uid: $UID
      data:
        url: http://$ADDRESS:$PORT
      EOF

      echo "created configmap"

    volumeMounts:
    - name: listener
      mountPath: /opt/listener/
  containers:
  - name: caddy
    image: caddy:2
    command:
    - sh
    - -c
    - |
      echo "start caddy"
      caddy file-server --root /usr/share/caddy --listen :8080
    resources:
      limits:
        memory: "200Mi"
        cpu: "500m"
    ports:
    - containerPort: 8080
      name: http
    volumeMounts:
    - name: listener
      mountPath: /opt/listener/
    readinessProbe:
      httpGet:
        port: http
      initialDelaySeconds: 5
      periodSeconds: 2
      failureThreshold: 3
    livenessProbe:
      httpGet:
        port: http
      initialDelaySeconds: 5
      periodSeconds: 2
      failureThreshold: 3
  volumes:
  - name: listener
    ephemeral:
      volumeClaimTemplate:
        metadata:
          annotations:
            listeners.kubedoop.dev/class: cluster-internal
        spec:
          accessModes: ["ReadWriteOnce"]
          storageClassName: listeners.kubedoop.dev
          resources:
            requests:
              storage: 1Mi
