test/e2e/commons/sa.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: test
---
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: listener-test-role
rules:
- apiGroups: [""]
  resources: ["configmaps"]
  verbs: ["create", "get", "list", "watch"]
- apiGroups: ["listeners.kubedoop.dev"]
  resources: ["listeners"]
  verbs: ["create", "get", "list", "watch"]
