test/e2e/cluster-internal/access-manual-listener-assert.yaml
---
apiVersion: listeners.kubedoop.dev/v1alpha1
kind: Listener
metadata:
  name: manual-listener
spec:
  className: cluster-internal
  ports:
  - name: http
    port: 8080
    protocol: TCP
  publishNotReadyAddresses: true
status:
  ~.ingressAddresses:
    addressType: Hostname
    ports:
      http: 8080
  serviceName: manual-listener
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: access-manual-listener
status:
  availableReplicas: 3
  currentReplicas: 3
  readyReplicas: 3
  replicas: 3
