test/e2e/cluster-internal/listener-assert.yaml
######################### example #######################
# apiVersion: listeners.kubedoop.dev/v1alpha1
# kind: Listener
# metadata:
#   creationTimestamp: "2024-12-25T06:19:48Z"
#   generation: 1
#   name: caddy-listener
#   namespace: default
#   ownerReferences:
#   - apiVersion: v1
#     blockOwnerDeletion: true
#     controller: true
#     kind: PersistentVolume
#     name: pvc-f529b980-26c6-44de-aff0-2038513f2eeb
#     uid: 2d930a16-5881-4c34-869f-d1447edc976d
#   resourceVersion: "35301"
#   uid: 6f5e8905-20a0-43b7-bf17-0f8c633f9b89
# spec:
#   className: cluster-internal
#   ports:
#   - name: http
#     port: 8080
#     protocol: TCP
#   publishNotReadyAddresses: true
# status:
#   ingressAddresses:
#   - address: caddy-listener.default.svc.cluster.local
#     addressType: Hostname
#     ports:
#       http: 8080
#   serviceName: caddy-listener
######################### end example #######################

---
apiVersion: listeners.kubedoop.dev/v1alpha1
kind: Listener
metadata:
  name: caddy-listener
spec:
  className: cluster-internal
  ports:
  - name: http
    port: 8080
    protocol: TCP
  publishNotReadyAddresses: true
status:
  ~.ingressAddresses:
    addressType: Hostname
    ports:
      http: 8080
  serviceName: caddy-listener
