test/e2e/cluster-internal/pod-assert.yaml

apiVersion: v1
kind: Pod
metadata:
  name: pod-cluster-internal
status:
  phase: Running
